canary-on-k8s/k8s/v2-deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v2
      version: v2
  template:
    metadata:
      labels:
        app: app-v2
        version: v2
    spec:
      containers:
        - name: app-v2
          image: saiaunghlyanhtet/canary-on-k8s:v2
          ports:
            - containerPort: 8080
