canary-on-k8s/k8s/v1-service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
  namespace: default
spec:
  selector:
    app: app-v1
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
