canary-on-k8s/k8s/v1-ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1-ig
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: canary-on-k8s.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-v1-svc
                port:
                  number: 80
