canary-on-k8s/k8s/v2-ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v2-ig
  annotations:
    nginx.ingress.kubernetes.io/canary: \"true\"
    nginx.ingress.kubernetes.io/canary-weight: \"30\"
spec:
  ingressClassName: nginx
  rules:
    - host: canary-on-k8s.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-v2-svc
                port:
                  number: 80
